--- a/views/admin/products/products.ejs
+++ b/views/admin/products/products.ejs
@@ -59,7 +59,7 @@
           <%= product.product_name %>
         </td>
         <td>
-          <img class="img-fluid img-thumbnail" src="/uploads/product-images/<%- product.primary_image.name %>" width="72rem" alt="">
+          <img class="img-fluid img-thumbnail" src="/uploads/product-images/<%- product.images.name %>" width="72rem" alt="">
         </td>
         <td>
           <%- product.stock %>
