--- a/trash.ejs
+++ b/trash.ejs
@@ -47,7 +47,7 @@
       <div class="col-lg-3 col-md-4 rounded-image-preview">
           <label for="imageInput1" class="image-label">Image 1
               <div class="rounded-image-preview d-flex flex-column align-items-center">
-                  <!-- <img id="imagePreview1" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" class="small-image" /> -->
+                  <img id="imagePreview1" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" class="small-image" />
                   <div class="d-flex">
                       <input name="image1" type="file" accept="image/*" id="imageInput1" class="imageInput" onchange="openImageCropper(1)">
                       <button type="button" class="btn btn-sm btn-secondary mt-2 ml-2" onclick="openModal('imagePreview1')">Crop</button>
@@ -61,7 +61,7 @@
         <div class="col-lg-3 col-md-6 rounded-image-preview">
             <label for="imageInput1" class="image-label">Image 2
                 <div class="rounded-image-preview d-flex flex-column align-items-center">
-                    <!-- <img id="imagePreview1" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" class="small-image" /> -->
+                    <img id="imagePreview1" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" class="small-image" />
                     <div class="d-flex">
                         <input name="image1" type="file" accept="image/*" id="imageInput1" class="imageInput" onchange="openImageCropper(1)">
                         <button type="button" class="btn btn-sm btn-secondary mt-2 ml-2" onclick="openModal('imagePreview1')">Crop</button>
@@ -75,7 +75,7 @@
           <div class="col-lg-3 col-md-6 rounded-image-preview">
               <label for="imageInput1" class="image-label">Image 3
                   <div class="rounded-image-preview d-flex flex-column align-items-center">
-                      <!-- <img id="imagePreview1" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" class="small-image" /> -->
+                      <img id="imagePreview1" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" class="small-image" />
                       <div class="d-flex">
                           <input name="image1" type="file" accept="image/*" id="imageInput1" class="imageInput" onchange="openImageCropper(1)">
                           <button type="button" class="btn btn-sm btn-secondary mt-2 ml-2" onclick="openModal('imagePreview1')">Crop</button>
@@ -305,4 +305,194 @@
   
   </script>
   <!-- <script defer src="/js/admin/products/add-product.js"></script> -->
+  
+
+
+
+
+
+
+
+
+
+
+  <section class="breadcrumb-option">
+    <div class="container">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb breadcrumb-chevron p-3 bg-body-tertiary rounded-2">
+          <li class="breadcrumb-item">
+            <a class="link-body-emphasis" href="/admin">
+              <svg class="bi" width="16" height="16">
+                <use xlink:href="#house-door-fill"></use>
+              </svg>
+              <span class="visually-hidden">Dashboard</span>
+            </a>
+          </li>
+          <li class="breadcrumb-item">
+            <a class="link-body-emphasis fw-semibold text-decoration-none  text-success" href="/admin/products">Products</a>
+          </li>
+  
+          <li class="breadcrumb-item active" aria-current="page">Add Product</li>
+        </ol>
+      </nav>
+    </div>
+  </section>
+  
+  <div class="container d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2"><%= locals.title ? locals.title : 'Dashboard' %></h1>
+  </div>
+  <div class="main-panel">
+    <div class="content-wrapper">
+      <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+          <div class="card-body">
+            <div class="text-dark"> <!-- Add text-dark class here -->
+              <h4 class="card-title">Add New Product</h4>
+            </div>
+            <form class="addProductForm" action="/admin/addProduct" method="post" enctype="multipart/form-data" onsubmit="return validateForm()" novalidate>
+  
+              <div class="form-group row">
+                <div class="col-6">
+                  <label for="product_name" class="text-dark">Product Title</label> <!-- Add text-dark class here -->
+                  <input type="text" class="form-control text-dark text-justify" name="product_name" id="product_name"
+                    placeholder="Name" >
+                    <span id="productNameError" class="text-danger"></span>
+                </div>
+                <div class="col-6">
+                  <label for="actualPrice" class="text-dark">Actual Price</label> <!-- Add text-dark class here -->
+                  <input type="number" class="form-control text-dark" id="actualPrice" name="actualPrice"
+                    placeholder="Price">
+                  <div id="priceError" class="text-danger"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group row">
+                    <div class="col-sm-12">
+                      <div class="form-group">  
+                        <label for="category">Categories:</label>
+                        <select class="form-select text-capitalize" name="category" required>
+                          <% categories.forEach(function(category) { %>
+                          <option class="text-capitalize" value="<%= category._id %>">
+                            <%= category.name %>
+                          </option>
+                          <% }); %>
+                        </select>
+                      </div>
+                      <div id="categoryError" class="text-danger"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group row">
+                    <div class="col-sm-12">
+                      <label for="sellingPrice" class="text-dark">Discount Price</label> <!-- Add text-dark class here -->
+                  <input type="number" class="form-control text-dark" id="sellingPrice" name="sellingPrice"
+                    placeholder="Price">
+                      <div id="genderError" class="text-danger"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group row">
+                    <div class="col-sm-12">
+                      <label for="brand_name" class="text-dark">Brand</label> <!-- Add text-dark class here -->
+                      <input type="text" class="form-control text-dark" id="brand_name" name="brand_name"
+                        placeholder="Brand Name" onkeyup="capitalizeFirstLetter(this)" >
+                        <span id="brandError" class="text-danger"></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group row">
+                    <div class="col-sm-12">
+                      <label for="product_stock" class="text-dark">Stock</label> <!-- Add text-dark class here -->
+                      <input type="number" class="form-control text-dark" id="product_stock" name="stock"
+                        placeholder="Enter Stock" >
+                        <span id="quantityError" class="text-danger"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group mt-2">
+                <label for="description" class="text-dark">Description</label> <!-- Add text-dark class here -->
+                <textarea name="description" class="form-control text-dark" id="description" rows="4"
+                  ></textarea>
+                  <span id="descriptionError" class="text-danger"></span>
+              </div>
+              <div class="row d-flex justify-content-between mt-3">
+                <div class="col-lg-3 col-md-6 rounded-image-preview">
+                  <label for="imageInput1" class="image-label">Image 1
+                    <div class="rounded-image-preview">
+                      <img id="imagePreview1" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" />
+                    </div>
+                    <input name="image1" type="file" accept="image/*" id="imageInput1" class="imageInput" onchange="openImageCropper(1)">
+                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="openModal('imagePreview1')">Crop</button>
+                  </label>
+                  <span id="imageError1" class="text-danger"></span>
+                </div>
+    
+                <div class="col-lg-3 col-md-6 rounded-image-preview">
+                  <label for="imageInput2" class="image-label">Image 2
+                    <div class="rounded-image-preview">
+                      <img id="imagePreview2" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" />
+                    </div>
+                    <input name="image2" type="file" accept="image/*" id="imageInput2" class="imageInput" onchange="openImageCropper(2)">
+                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="openModal('imagePreview2')">Crop</button>
+                  </label>
+                  <span id="imageError2" class="text-danger"></span>
+                </div>
+    
+                <div class="col-lg-3 col-md-6 rounded-image-preview">
+                  <label for="imageInput3" class="image-label">Image 3
+                    <div class="rounded-image-preview">
+                      <img id="imagePreview3" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" />
+                    </div>
+                    <input name="image3" type="file" accept="image/*" id="imageInput3" class="imageInput" onchange="openImageCropper(3)">
+                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="openModal('imagePreview3')">Crop</button>
+                  </label>
+                  <span id="imageError3" class="text-danger"></span>
+                </div>
+    
+                <div class="col-lg-3 col-md-6 rounded-image-preview">
+                  <label for="imageInput4" class="image-label">Image 4
+                    <div class="rounded-image-preview">
+                      <img id="imagePreview4" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" />
+                    </div>
+                    <input name="image4" type="file" accept="image/*" id="imageInput4" class="imageInput" onchange="openImageCropper(4)">
+                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="openModal('imagePreview4')">Crop</button>
+                  </label>
+                  <span id="imageError4" class="text-danger"></span>
+                </div>
+              </div>  
+              <button type="submit" class="btn btn-lg btn-success mr-2 mt-5">Add product</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- Modal for Cropping -->
+  <div class="modal fade" id="cropModal" tabindex="-1" role="dialog" aria-labelledby="cropModalLabel" aria-hidden="true" style="">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="cropModalLabel">Crop Image</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" >
+          <img id="cropperImage" src="#" alt="Croppable Image"  />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" onclick="cropImage()">Crop</button>
+        </div>
+      </div>
+    </div>
+  </div>
+    <script defer>"/js/admin/products/add-product.js"</script>
+  
   
