--- a/views/admin/products/editProduct.ejs
+++ b/views/admin/products/editProduct.ejs
@@ -31,40 +31,7 @@
       <legend class="h2 fw-bold text-center m-3">
         Edit Product - <%- product.product_name %>
       </legend>
-      <div class="card col-md-4 pb-0">
-        <fieldset class="card-body align-items-center">
-          <legend>Edit Product Images</legend>
-          <span class="m-2 text-success">file supports only: jpeg,jpg,png,webp</span>
-  
-          <div class="card-body">
-            <div class="primary-img row">
-              <label for="inputtext3" class="col-sm-2 col-md-12 col-form-label mb-2">Primary Image</label>
-              <div class="d-flex align-items-center justify-content-evenly">
-                <img src="/uploads/product-images/<%= product.primary_image.name %>" class="border rounded" id="img<%= product.primary_image.name %>" alt="" style="width: 4rem" />
-                <div class="col-sm-10 col-md-9">
-                  <input type="hidden" class="form-control mb-2 prod-img" value="<%= product.primary_image._id %>" name="id_primary_img" />
-                  <input type="file" class="form-control mb-2" id="<%= product.primary_image.name %>" accept=".jpg,.jpeg,.png,.webp,.svg" onchange="previewImg(event)" name="primaryImage" />
-                </div>
-              </div>
-            </div>
-            <div class="secondary-img row">
-              <div class="d-flex align-items-center">
-                <label for="inputtext3" class="col-form-label mb-2">Secondary Images</label>
-              </div>
-              <% product.secondary_images.forEach(function(img) { %>
-              <img src="/uploads/product-images/<%= img.name %>" class="border rounded mt-1" alt="" id="img<%= img.name %>" style="width: 5rem" />
-              <div class="col-sm-10 col-md-9 mt-3">
-                <input type="file" class="form-control mb-2" accept=".jpeg,.png,.jpg,.webp,.svg" id="<%= img.name %>" onchange="previewImg('event')" name="images" />
-                <input type="hidden" class="form-control mb-2" value="<%= img._id %>" name="id_secondary_img" />
-              </div>
-              <% }); %>
-  
-              <div class="d-flex align-items-center secondary-img jsutify-content-center"></div>
-              <br />
-            </div>
-          </div>
-        </fieldset>
-      </div>
+      
       <div class="card col-md-7">
         <fieldset class="card-body">
           <legend>Product Details</legend>
@@ -94,17 +61,7 @@
               <small></small>
             </div>
             <div class="form-group col mb-3">
-              <label for="size" class="form-label">Size</label>
-              <input name="size" type="number" class="form-control" id="size" value="<%- product.size %>" />
-              <small></small>
-            </div>
-            <div class="form-group col mb-3">
-              <label for="product_color" class="form-label">Color</label>
-              <input name="product_color" type="color" class="form-control" id="product_color" value="<%- product.color %>" />
-              <small></small>
-            </div>
-            <div class="form-group col mb-3">
-              <label for="product_stock" class="form-label">Stock/Quantity</label>
+              <label for="product_stock" class="form-label">Stock</label>
               <input name="stock" type="number" class="form-control" id="product_stock" min="1" value="<%- product.stock %>" />
               <small></small>
             </div>
